--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-	"dev": "next",
+    "dev": "next",
     "build": "next build",
     "start": "next start"
   },
@@ -21,6 +21,9 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "swr": "^0.1.16"
   },
   "devDependencies": {
