--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "next-bp",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon src/server/index.js",
-    "build": "next build",
-    "start": "next start"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@zeit/next-sass": "^1.0.1",
-    "axios": "^0.19.2",
-    "dotenv-safe": "^8.2.0",
-    "express": "^4.17.1",
-    "isomorphic-unfetch": "^3.0.0",
-    "next": "^9.2.1",
-    "nextjs-fonts": "^0.22.0",
-    "node-sass": "^4.13.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "swr": "^0.1.16"
-  },
-  "devDependencies": {
-    "nodemon": "^1.12.1"
-  }
+	"name": "next-bp",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"dev": "nodemon server/index.js",
+		"build": "next build",
+		"start": "cross-env NODE_ENV=production node server/index.js",
+		"next:dev": "next",
+		"next:start": "next start"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@zeit/next-sass": "^1.0.1",
+		"axios": "^0.19.2",
+		"dotenv-safe": "^8.2.0",
+		"express": "^4.17.1",
+		"next": "^9.2.1",
+		"nextjs-fonts": "^0.22.0",
+		"node-sass": "^4.13.1",
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0",
+		"react-redux": "^7.1.3",
+		"redux": "^4.0.5",
+		"redux-thunk": "^2.3.0",
+		"swr": "^0.1.16"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.2"
+	}
 }
