--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
 		"nextjs-fonts": "^0.22.0",
 		"node-sass": "^4.13.1",
 		"react": "^16.12.0",
+		"react-bootstrap-sweetalert": "^5.1.9",
 		"react-dom": "^16.12.0",
 		"react-redux": "^7.1.3",
+		"reactstrap": "^8.4.1",
 		"redux": "^4.0.5",
 		"redux-thunk": "^2.3.0",
+		"sweetalert": "^2.1.2",
 		"swr": "^0.1.16"
 	},
 	"devDependencies": {
